Fix where the logo would show a line behind it

--- a/app/components/main-nav/styles.scss
+++ b/app/components/main-nav/styles.scss
@@ -3,6 +3,10 @@
 
 .navbar-brand {
   height: $navbar-height + 1px;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 &.navbar {
